# tvm

./: .gitmodules  Jenkinsfile
apps/howto_deploy/: Makefile  cpp_deploy.cc  run_example.sh
ci/jenkins/: Jenkinsfile.j2
python/tvm/relay/op/contrib/: tensorrt.py
python/tvm/relay/op/strategy/: generic.py
python/tvm/topi/cuda/: conv2d_transpose.py
src/relay/op/nn/: convolution.cc
src/runtime/contrib/tensorrt/: tensorrt_ops.cc
tutorials/Cross_Compilation_And_RPC/: test_rpc.py
tutorials/codec_models/: CMakeLists.txt  Makefile  README.md  common.py  config.yaml  convert_onnx_to_trt_engine.py  debug_intermediate_layers.py  rknn_model.py  run_cpp_forward.cpp  simple_cfg.txt  tvm_codec.py
tutorials/codec_models/cpp_deploy_tvm/: run_cpp_forward.cpp
tutorials/codec_models/include/: common_tools.hpp
tutorials/codec_models/pure_trt/: pure_trt.cpp
tutorials/codec_models/tune_logs/: autoscheduler_s0_4_1_z_decoder_cuda.tnlg  autotvm_s0_4_1_y_encoder_cuda.tnlg  autotvm_s0_4_1_z_decoder_cuda.tnlg
